fix dropdown, theme button and theme button alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,7 @@ h6 {
 .checkbox {
 	opacity: 0;
 	position: absolute;
+    margin-left: 38px;
 }
 
 .label {
@@ -307,7 +308,7 @@ h6 {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-    margin-left: 16px;
+    margin: 2px 0 0 38px;
 	padding: 3px;
 	position: relative;
 	height: 16px;
